# confused-deputy-aws

./: .gitignore  BEDROCK_CONFIGURATION.md  README.md  deploy-ecr.sh  docker-compose-unified.yml  post-deploy-fix.sh
docker-compose/: docker-compose.yml  export-env-aws.sh
docker-compose/products-agent/: docker-compose.yml
docker-compose/products-mcp/: docker-compose.yml
docker-compose/products-web/: docker-compose.yml
products-agent/: .dockerignore  Dockerfile  README.md  api_models.py  docker-build.sh  exceptions.py  main.py  models.py  products_agent.py  pyproject.toml  requirements.txt
products-agent/auth/: __init__.py  entra_token_service.py  jwt_utils.py
products-mcp/: .env.example  Dockerfile  README.md  __init__.py  config.py  db_utils.py  docker-build.sh  jwt_verifier.py  models.py  product_service.py  pyproject.toml  server.py  vault_client.py
products-web/: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  app.py  docker-build.sh  openapi.json  pyproject.toml  requirements-lock.txt  requirements.txt
scripts/: README.md  auto-configure.sh  check-auth-health.sh  cleanup-ecr-images.sh  config.sh.example  config.sh.template  setup.sh  terraform-post-apply.sh  update-docker-compose-variables.sh  update-secrets.sh
terraform/: .terraform.lock.hcl  README.md  export-env-testoauth2.sh  export-env.sh  main.tf  outputs.tf  prompt.md  providers.tf  steps.md  terraform.tf  terraform.tfvars.example  variables.tf
terraform/modules/aws-documentdb/: main.tf
terraform/modules/aws-networking/: main.tf  outputs.tf  variables.tf
terraform/modules/azure-ad-app/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/bastion/: alb-resources.tf  main.tf  outputs.tf  user-data.sh  variables.tf  vault_resources.tf
terraform/modules/documentdb/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/hcp-infra/: main.tf
terraform/modules/hcp-vault/: main.tf
terraform/modules/vault-auth/: main.tf  outputs.tf  variables.tf
terraform/test/: README.md  oauth2_entra_flow.md  test_oauth2_flow.py
terraform/test_oauth2_flow/: cognito_steps.md  setup_env_template.sh
