[project]
name = "products-mcp"
version = "0.1.0"
description = "MCP server for AWS DocumentDB product operations"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "fastmcp>=2.11.3",
    "PyJWT>=2.0.0,<3.0.0",
    "hvac>=2.3.0",
    "mcp[cli]>=1.13.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.14.0",
    "python-dotenv>=1.1.1",
]
